--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App for dealing with android settings",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublish": "gradle clean build"
   },
   "repository": {
     "type": "git",
